# cloud_server

./: CMakeLists.txt  README.txt
cloud_server/: ai_analyzer.cpp  ai_analyzer.h  database.h  logger.cpp  main.cpp  qwen_client.cpp  sqlite3.h
edge_server/: cache_manager.cpp  cache_manager.h  crop_config.cpp  crop_config.h  deduplicator.cpp  deduplicator.h  device_monitor.cpp  device_monitor.h  grpc_client_stub.cpp  grpc_client_stub.h  json_parser.cpp  json_parser.h  logger.cpp  logger.h  main.cpp  network_monitor.cpp  network_monitor.h  offline_controller.cpp  offline_controller.h  rule_engine.cpp  rule_engine.h  sensor_data.h  tcp_server.cpp  tcp_server.h
frontend/: README.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  types.ts
frontend/src/api/: http.ts  services.ts
frontend/src/components/: AppLayout.vue  LineChart.vue
frontend/src/router/: index.ts
frontend/src/stores/: user.ts
frontend/src/styles/: global.css
frontend/src/utils/: translate.ts
frontend/src/views/: AlertsView.vue  AnalysisView.vue  DashboardView.vue  DevicesView.vue  HistoryView.vue  LoginView.vue  UsersView.vue
proto/: sensor.proto
simulator/: config.cpp  config.h  device_simulator.cpp  device_simulator.h  main.cpp  tcp_client.cpp  tcp_client.h
src/: auth.cpp  auth.h  database.cpp  grpc_service_impl.cpp  grpc_service_impl.h  qwen_client.h  rest_server.cpp  rest_server.h
